[project]
name = "checkhash"
version = "2.1.3"
description = "Simple CLI-tool for checking hash of files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyinstaller>=6.19.0"]

[dependency-groups]
dev = ["ruff>=0.15.7", "ty>=0.0.24"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
